@@ -15,3 +15,4 @@ Bug fixes
 
  * The ``wagtailuserbar`` template tag now gracefully handles situations where the ``request`` object is not in the template context (Matt Westcott)
  * Meta classes on StreamField blocks now handle multiple inheritance correctly (Tim Heap)
+ * Now user can upload images / documents only into permitted collection from choosers
